# qmlGitstats

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
.github/workflows/: blank.yml  ci.yml
qml/: BlockChart.qml  Button.qml  Label.qml  Main.qml  OpenRepo.qml  PieChart.qml  Repo.qml  RepoAuthors.qml  RepoCommitsPerDay.qml  TabBar.qml  TabBarItem.qml  Theme.qml
src/: commithandler.h  commitsbyauthor.cpp  commitsbyauthor.h  commitsperday.cpp  commitsperday.h  repo.cpp  repo.h
